# JadeStats

./: .gitignore  Cargo.toml  README.md  fill_template.sh  index.html  notes.txt
analyzer-core/: Cargo.toml
analyzer-core/src/: api_error.rs  data_processor.rs  interface.rs  lib.rs  player.rs  save.rs
analyzer-core/src/data_processor/: filter.rs  items.rs
analyzer-core/src/interface/: game_interface.rs  match_data.rs  ranked_data.rs  timeline.rs  user_interface.rs
assets/: items.json  profile_index.json  sw.js  temp.json
assets/profiles/: Odysseus#131#EUW.json
src/: lib.rs  main.rs
src/app/: app_error.rs  home.rs  mod.rs  ui.rs
src/app/ui/: error_window.rs  home.rs  loading.rs  player_interface.rs  profiles_list.rs  stats_display.rs  stats_page.rs
