[package]
name = "analyzer-core"
version = "0.2.0"
edition = "2024"

[lib]
name = "analyzer_core"
path = "src/lib.rs"

[dependencies]
project-root = "0.2.2"
chrono = "0.4.42"
reqwest = { version = "0.12.25", features = ["blocking", "json"]}
serde = "1.0.219" 
serde_derive = "1.0.219"
serde_json = "1.0.145"
owo-colors = "4.2.3"
threadpool = "1.8.1"
